<resources>
    <string name="app_name">genral store</string>
    <string name="i_am_human">i am human</string>
    <string name="Enter_me">Enter_me</string>

    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="ABOUT">ABOUT</string>
    <string name="add_new">Add_ITEM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="signup_now">SignUp Now</string>
    <string name="login_now">Login Now</string>
    <string name="login_noe">Login in</string>
    <string name="signin_now">Signin Now</string>
</resources>
