<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin">


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/login_logo"
        />

    <EditText
        android:id="@+id/login_email"
        android:hint="@string/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        />
    <EditText
        android:id="@+id/login_password"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        />

    <Button
        android:id="@+id/btn_signin_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_noe"
        android:textColor="@color/white"
        android:background="@color/red"
        android:onClick="loginFun"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/btn_goto_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_now"
        android:textColor="@color/red"
        android:padding="10dp"
        android:background="@color/white"
        android:onClick="GotoSigup"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_signin_submit"
        android:layout_marginTop="25dp"/>


</RelativeLayout>