<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegister">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:id="@+id/login_logo"
            />

        <EditText
            android:id="@+id/signup_email"
            android:hint="@string/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_logo"
            android:padding="12dp"
            android:layout_marginTop="12dp"
             />
    <EditText
        android:id="@+id/signup_password"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_email"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        />

        <Button
            android:id="@+id/btn_signup_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_now"
            android:textColor="@color/white"
            android:background="@color/red"
            android:onClick="registerFun"
            android:layout_below="@+id/signup_password"
            android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/btn_goto_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="GotoSigin"
        android:text="@string/signin_now"
        android:padding="10dp"
        android:textColor="@color/red"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_signup_submit"
        android:layout_marginTop="25dp"/>


</RelativeLayout>